@@ -1,5 +1,7 @@
 #!/bin/bash
 
+pkill -f rmiregistry
+
 #-----------Comprobar-número-parámetros----------
 if [ $# -eq 0 ]; then
     echo "Uso: $0 --server | --client"
@@ -7,13 +9,22 @@ if [ $# -eq 0 ]; then
 fi
 
 #--------------------Compilar--------------------
-javac --enable-preview -d bin *.java
+for fich in *.java; do
+    class_fich="${fich%.java}.class"
+    if [ ! -f "$class_fich" ] || [ "$fich" -nt "$class_fich" ]; then
+        javac "$fich"
+    fi
+done
 
 #--------------------Ejecutar--------------------
 if [ "$1" == "--server" ]; then
-    java --enable-preview -cp bin practica3.CollectionImpl
+    rmiregistry 32000 &
+    while ! nc -z 127.0.0.1 32000; do
+        sleep 1
+    done
+    java CollectionImpl
 elif [ "$1" == "--client" ]; then
-    java --enable-preview -cp bin practica3.Cliente
+    java Cliente
 else
     echo "Opción no válida: $1"
     echo "Uso: $0 --server | --client"
